--- a/client/src/components/Categories/style.css
+++ b/client/src/components/Categories/style.css
@@ -7,7 +7,7 @@
   body {
     font-size: 16px;
     font-family: Helvetica, Arial, Sans-Serif;
-    background-color: #ddd;
+    background-color:#f5f8fa;
   }
   
   a {
