first categories and second categories are connected and display

--- a/client/src/components/ThirdCategory/style.css
+++ b/client/src/components/ThirdCategory/style.css
@@ -1,9 +1,9 @@
-.C2 {
-      background-color: #FA6E59;
-      border: 5px solid #fb998a;
+.C3 {
+      background-color: #FFDB5C;
+      border: 5px solid #ffe99d;
 }
 
-.c2Col {
+.c3Col {
   display: inline-block;
   position: relative;
   width: 22%;
