--- a/client/src/components/Categories/style.css
+++ b/client/src/components/Categories/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-  }
+  } */
   
   body {
     font-size: 16px;
@@ -59,7 +59,7 @@
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    background: #4897D8;
+    /* background: #4897D8; */
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
@@ -82,7 +82,7 @@
   }
   
   @media only screen and (min-width: 350px) {
-    .col {
+    .c1Col {
       display: inline-block;
       position: relative;
       width: 30%;
@@ -95,29 +95,33 @@
       position: relative;
       padding-top: 100%;
     }
-    .col:nth-child(3n+1) {
+    .c1Col:nth-child(3n+1) {
       /* margin-left: 1%; */
     }
-  
+    .C1 {
+      background-color: #4897D8;
+      border: 5px solid #7eb6e3;
+    }
     .circle {
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: #4897D8;
+      /* background-color: #4897D8; */
       color: #333;
       border-radius: 50%;
       box-sizing: border-box;
       text-align: center;
       display: block;
       padding: 5px;
-      border: 5px solid #7eb6e3;
+      /* border: 5px solid #7eb6e3; */
       -webkit-transition: all 1s ease-out;
       -moz-transition: all 1s ease-out;
       -o-transition: all 1s ease-out;
       transition: all 1s ease-out;
     }
+    
     .circle:before {
       content: '';
       display: inline-block;
