--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -8,29 +8,35 @@
     padding-left: 100px;
 }
 
+#logo{
+    height: 45px;
+    width: auto;
+    padding-right: 8px
+}
+
 @media only screen and (max-width: 595px) {
  #menu {
-    padding-left: 50px;
+    padding-left: 42px;
  }
 }
 
 @media only screen and (max-width: 510px) {
     #menu {
-       padding-left: 20px;
+       padding-left: 12px;
     }
    }
 
 @media only screen and (max-width: 469px) {
     #search {
-        width: 150px;
+        width: 135px;
     }
 }
 
 @media only screen and (max-width: 400px) {
     #menu {
-        padding-left: 20px;
+        padding-left: 12px;
     }
     #search {
-        width: 100px;
+        width: 80px;
     }
 }
