--- a/client/src/components/User-page/style.css
+++ b/client/src/components/User-page/style.css
@@ -31,3 +31,25 @@
     height:300px;
     width: 100%;
 }
+.crop{
+    background: white;
+    border-radius: 5px;
+    border: 2px dashed rgb(0, 135, 247);
+    border-image: none;
+    margin-left: auto;
+    margin-right: auto;
+    height:300px;
+    width: 100%;
+}
+
+.cropPreview{
+    background: white;
+    border-radius: 5px;
+    border: 2px dashed rgb(0, 135, 247);
+    border-image: none;
+    margin-left: auto;
+    margin-right: auto;
+    height:300px;
+    width: 100%;
+}
+
